nuova codifica macchine e gruppi con versione, ottimizzata tab codifica

--- a/WORKSPACES/42e77f6a_prog/config.json
+++ b/WORKSPACES/42e77f6a_prog/config.json
@@ -37,6 +37,12 @@
         "length": 3,
         "charset": "ALNUM",
         "case": "UPPER"
+      },
+      "VNUM": {
+        "enabled": true,
+        "length": 4,
+        "charset": "NUM",
+        "case": "UPPER"
       }
     }
   },
